--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sidhant Chadda</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123641370-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-123641370-1');
+	</script>
   </head>
   <body>
     <div id="root"></div>
